--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
   box-sizing: border-box;
 }
 
-
 .interface {
   display: flex;
   flex-direction: row;
@@ -14,7 +13,7 @@ body {
   flex-direction: column;
   width: 960px;
   height: 960px;
-  flex: 1
+  flex: 1;
 }
 
 .header {
@@ -29,5 +28,5 @@ button {
 .buttonContainer {
   display: flex;
   justify-content: center;
-  gap: 20px
+  gap: 20px;
 }
