--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 .interface {
   display: flex;
   flex-direction: row;
-
+justify-content: center;
 }
 
 .gridContainer {
@@ -13,7 +13,6 @@ body {
   flex-direction: column;
   width: 960px;
   height: 960px;
-  flex: 1;
 }
 
 .header {
